master

2.33.8
- Mayhem
  Add Country filtering.

2.33.7
- Mayhem
  Add /ck/ archive redirection.

2.33.6
- Mayhem
  Update/fix archive redirection method.

2.33.5
- Mayhem
  Add /sp/ archive redirection.

2.33.4
- Mayhem
  Fix QR with the new captcha loading method.
  The QR will now work on /f/ too.

2.33.3
- Mayhem
  Revert changes that broke fetchers in Firefox.

2.33.2
- Mayhem
  After 1000+ characters, a character counter will appear in the QR.
  Add /soc/ archive redirection.

2.33.1
- Mayhem
  Add /r9k/ archive redirection.

2.33.0
- btmcsweeney
  Allow users to specify text for sauce links.
- Mayhem
  Dead quotes can now be previewed or inlined with compatible archivers.
  Opera fixes.
  /f/ fixes.

2.32.1
- Mayhem
  Fix images uploaded as spoilers.

2.32.0
- aeosynth
  delete button
- Mayhem
  Fix spoiler/code tag keybinds being ignored on post submission.

2.31.6
- Mayhem
  Update captcha longevity to 5 minutes max, as according to 4chan's change.

2.31.5
- Mayhem
  Fix spoiler and code tag keybinds regression.

2.31.4
- Mayhem
  Add /an/ and /toy/ archive redirection.

2.31.3
- Mayhem
  Add /cgl/, /e/, /mu/ and /w/ archive redirection.

2.31.2
- Mayhem
  Add /x/ archive redirection.

2.31.1
- Mayhem
  Fix some stub issues.

2.31.0
- Mayhem
  Add a per filter stub setting.

2.30.8
- Mayhem
  Fix quote previewing of forward hidden posts.

2.30.7
- aeosynth
  Fix expanding comments.
- Mayhem
  Fix file size info in case of spoiler image.

2.30.6
- Mayhem
  Fix file size formatting always using integers.

2.30.5
- Mayhem
  Fix syntax highlighting in code of fetched posts on /g/.
  Add quick [code] tags keybind (alt+c).

2.30.4
- Mayhem
  Add /co/ and /k/ archive redirection.
  Fix quote resurrection of existing posts.

2.30.3
- Mayhem
  Various bug fixes.

2.30.2
- Mayhem
  Various bug fixes.
  Add seconds as a supported Time Formatting specifier.

2.30.1
- Mayhem
  Fix 4chan X not affecting fetched posts on Firefox Stable and Opera.

2.30.0
- Mayhem