@@ -1715,6 +1715,7 @@ QR =
     if g.REPLY and (Conf['Unread Count'] or Conf['Unread Favicon'])
       Unread.foresee.push postID
     if g.REPLY and Conf['Thread Updater'] and Conf['Auto Update This']
+      Updater.unsuccessfulFetchCount = 0
       Updater.update()
 
     QR.status()
@@ -2000,7 +2001,7 @@ Options =
 
 Updater =
   init: ->
-    html = "<div class=move><span id=count></span> <span id=timer>-#{Conf['Interval']}</span></div>"
+    html = '<div class=move><span id=count></span> <span id=timer></span></div>'
     {checkbox} = Config.updater
     for name of checkbox
       title = checkbox[name][1]
@@ -2010,7 +2011,7 @@ Updater =
     checked = if Conf['Auto Update'] then 'checked' else ''
     html += "
       <div><label title='Controls whether *this* thread automatically updates or not'>Auto Update This<input name='Auto Update This' type=checkbox #{checked}></label></div>
-      <div><label>Interval (s)<input name=Interval value=#{Conf['Interval']} class=field size=4></label></div>
+      <div><label>Interval (s)<input type=number name=Interval class=field min=5></label></div>
       <div><input value='Update Now' type=button></div>"
 
     dialog = UI.dialog 'updater', 'bottom: 0; right: 0;', html
@@ -2018,6 +2019,9 @@ Updater =
     @count  = $ '#count', dialog
     @timer  = $ '#timer', dialog
     @thread = $.id "t#{g.THREAD_ID}"
+
+    @unsuccessfulFetchCount = 0
+    @lastModified = '0'
 
     for input in $$ 'input', dialog
       if input.type is 'checkbox'
@@ -2034,20 +2038,20 @@ Updater =
           # Required for the QR's update after posting.
           Conf[input.name] = input.checked
       else if input.name is 'Interval'
+        input.value = Conf['Interval']
         $.on input, 'input', @cb.interval
+        @cb.interval.call input
       else if input.type is 'button'
         $.on input, 'click', @update
 
     $.add d.body, dialog
 
-    @retryCoef = 10
-    @lastModified = 0
-
   cb:
     interval: ->
       val = parseInt @value, 10
-      @value = if val > 0 then val else 1
+      @value = if val > 5 then val else 5
       $.cb.value.call @
+      Updater.timer.textContent = "-#{Updater.getInterval()}"
     verbose: ->
       if Conf['Verbose']
         Updater.count.textContent = '+0'
@@ -2084,14 +2088,14 @@ Updater =
         return
       unless @status in [0, 200, 304]
         # XXX 304 -> 0 in Opera
-        Updater.retryCoef += 10 * (Updater.retryCoef < 120)
         if Conf['Verbose']
           Updater.count.textContent = @statusText
           Updater.count.className   = 'warning'
+        Updater.unsuccessfulFetchCount++
         return
 
-      Updater.retryCoef = 10
-      Updater.timer.textContent = "-#{Conf['Interval']}"
+      Updater.unsuccessfulFetchCount++
+      Updater.timer.textContent = "-#{Updater.getInterval()}"
 
       ###
       Status Code 304: Not modified
@@ -2099,7 +2103,8 @@ Updater =
       This saves bandwidth for both the user and the servers, avoid unnecessary computation,
       and won't load images and scripts when parsing the response.
       ###
-      if @status is 304
+      if @status in [0, 304]
+        # XXX 304 -> 0 in Opera
         if Conf['Verbose']
           Updater.count.textContent = '+0'
           Updater.count.className   = null
@@ -2116,16 +2121,25 @@ Updater =
         break if reply.id[2..] <= id #make sure to not insert older posts
         nodes.push reply
 
-      count  = nodes.length
-      scroll = Conf['Scrolling'] && Updater.scrollBG() && count &&
-        lastPost.getBoundingClientRect().bottom - d.documentElement.clientHeight < 25
+      count = nodes.length
       if Conf['Verbose']
         Updater.count.textContent = "+#{count}"
         Updater.count.className   = if count then 'new' else null
 
+      return unless count
+
+      Updater.unsuccessfulFetchCount = 0
+      Updater.timer.textContent = "-#{Updater.getInterval()}"
+      scroll = Conf['Scrolling'] && Updater.scrollBG() &&
+        lastPost.getBoundingClientRect().bottom - d.documentElement.clientHeight < 25
       $.add Updater.thread, nodes.reverse()
       if scroll
         nodes[0].scrollIntoView()
+
+  getInterval: ->
+    i = +Conf['Interval']
+    j = Math.min @unsuccessfulFetchCount, 9
+    Math.max i, [5, 10, 15, 20, 30, 60, 90, 120, 300, 600][j]
 
   timeout: ->
     Updater.timeoutID = setTimeout Updater.timeout, 1000
@@ -2133,21 +2147,18 @@ Updater =
 
     if n is 0
       Updater.update()
-    else if n is Updater.retryCoef
-      Updater.retryCoef += 10 * (Updater.retryCoef < 120)
-      Updater.retry()
+    else if n is Updater.getInterval()
+      Updater.unsuccessfulFetchCount++
+      Updater.count.textContent = 'Retry'
+      Updater.count.className   = null
+      Updater.update()
     else
       Updater.timer.textContent = n
-
-  retry: ->
-    @count.textContent = 'Retry'
-    @count.className = null
-    @update()
 
   update: ->
     Updater.timer.textContent = 0
     Updater.request?.abort()
-    #fool the cache
+    # Fool the cache.
     url = location.pathname + '?' + Date.now()
     Updater.request = $.ajax url, onload: Updater.cb.update,
       headers: 'If-Modified-Since': Updater.lastModified
@@ -4004,6 +4015,9 @@ body.unscroll {
 #updater:not(:hover) {
   border: none;
   background: transparent;
+}
+#updater input[type=number] {
+  width: 4em;
 }
 .new {
   background: lime;
