@@ -1,4 +1,7 @@
 master
+- Mayhem
+  The updater's refresh interval will now increase gradually in inactive threads.
+  The updater's refresh interval is now limited to 5 seconds minimum.
 
 2.33.8
 - Mayhem
